Fixed: Made incoming call info visible (BMC#3393)
BMC#3393 - can not see caller name or number in incoming call screen
- Font and color properties were commented out and meego theme
  colors were the same as dialog background.  Adjusted them to be
  visible and sized more sanely.

--- a/theme/style/dialer.css
+++ b/theme/style/dialer.css
@@ -110,16 +110,17 @@ MApplicationPageStyle.Portrait {
     minimum-size: 50% 30%;
     maximum-size: 50% 40%;
 }
+*/
 
 #alertName {
-    font: "Droid Sans Bold" 6mm;
+    font: "Droid Sans Bold" 3.2mm;
+    color: white;
 }
 
 #alertNumber {
-    font: "Droid Sans" 6mm;
+    font: "Droid Sans" 3.2mm;
     color: gray;
 }
-*/
 
 /* ***********************************************
  * DialerPage properties
